--- a/makefile.txt
+++ b/makefile.txt
@@ -1,33 +1,16 @@
-MMult1:
-	g++ -O3 MMult1.cpp -o MBlock
-	g++ -O3 -fopenmp -march=native MMult1.cpp -o MBlock
+hw2: 
+	g++ -std=c++11 -O3 val_test01_solved.cpp -o val1.o
+	g++ -std=c++11 -O3 val_test02_solved.cpp -o val2.o
+	g++ -std=c++11 -fopenmp -O3 -march=native MMult1.cpp -o MOmp.o
+	g++ -std=c++11 -O3 MMult1.cpp -o MBlock.o
+	g++ -std=c++11 -fopenmp -O3 omp_solved2.c -o omp2.o
+	g++ -std=c++11 -fopenmp -O3 omp_solved3.c -o omp3.o
+	g++ -std=c++11 -fopenmp -O3 omp_solved4.c -o omp4.o
+	g++ -std=c++11 -fopenmp -O3 omp_solved5.c -o omp5.o
+	g++ -std=c++11 -fopenmp -O3 omp_solved6.c -o omp6.o
+	g++ -std=c++11 -fopenmp -O3 -march=native jacobi2D-omp.cpp -o jacobi.o
+	g++ -std=c++11 -fopenmp -O3 -march=native gs2D-omp.cpp -o gs2D.o
 
-Val_test01_solved:
-	g++ -O3 Val_test01_solved.cpp -o val1
 
-Val_test02_solved:
-	g++ -O3 Val_test01_solved.cpp -o val2
-
-omp_solved2:
-	g++ -O3 -fopenmp omp_solved2.c -o omp2
-
-omp_solved3:
-	g++ -O3 -fopenmp omp_solved3.c -o omp3
-
-omp_solved4:
-	g++ -O3 -fopenmp omp_solved4.c -o omp4
-
-omp_solved5:
-	g++ -O3 -fopenmp omp_solved5.c -o omp5
-
-omp_solved6:
-	g++ -O3 -fopenmp omp_solved6.c -o omp6
-
-jacobi2D-omp:
-	g++ -O3 -fopenmp -march=native jacobi2D-omp.cpp -o jacobi
-
-gs2D-omp:
-	g++ -O3 -fopenmp -march=native gs2D-omp.cpp -o gs
-
-clean:
+clean: 
 	rm -f *.o
